// --- this file generated by tools, don't edit it!!!! ---
syntax = "proto3";
package pborm;
option go_package = "./pborm";

message CsGlobal
{
	int32 ID = 1;
	int64 OpenTime = 2;
	int32 DbStatus = 3;
}
