syntax = "proto3";

package pbserver;

import "s_db.proto";
option go_package = "./pbserver";


message ServDataTable
{
    repeated DbTableData ServTables = 1;    // 服务器相关的数据表 
}

message ServDataTableList
{
    int32 TableID = 1;  // 表id
    repeated DbTableListItem DataList = 2;
}

// ESMsgServDataLoadTables              = 1 // 加载数据表
message ESMsgServDataLoadTablesReq
{
    string LoadOwner = 1;   // 加载所属对象
}
message ESMsgServDataLoadTablesRep
{
    ServDataTable DataTable = 1;
}

// ESMsgServDataPushTablesPartial = 2 // 推送数据表分片数据
message ESMsgServDataPushTablesPartialNotify
{
    ServDataTable DataTable = 1;
}

// ESMsgServDataSaveTables        = 3 // 保存数据表
message ESMsgServDataSaveTablesReq
{
    ServDataTable DataTable = 1;
}

message ESMsgServDataSaveTablesRep
{
}

// ESMsgServDataLoadTableList        = 4 // 加载数据表(列表)
message ESMsgServDataLoadTableListReq
{
    string LoadOwner = 1;
}
message ESMsgServDataLoadTableListRep
{
    repeated ServDataTableList TableList = 1;
}

// ESMsgServDataSaveTableList        = 5 // 保存数据表(列表)
message ESMsgServDataSaveTableListReq
{
    repeated ServDataTableList TableList = 1;
}
message ESMsgServDataSaveTableListRep
{
}

// ESMsgServDataPushTableListPartial = 6 // 推送数据列表 分片数据
message ESMsgServDataPushTableListPartialNotify
{
    repeated ServDataTableList TableList = 1;
}